linked library and added game.js

--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
 	<meta charset="UTF-8" />
 	<title>A game about making games</title>
-    <script src="//cdn.jsdelivr.net/phaser/2.2.2/phaser.min.js"></script>
-    <style type="text/css">
-        body {
-		margin: 0;
-        }
+    <script src="lib/phaser.min.js"></script>
+		<script src="src/game.js"></script>
+
+		<style type="text/css">
+        body { margin: 0; padding: 0; }
     </style>
 </head>
 <body>
